[project]
name = "rekah-unreal-mcp"
version = "0.1.0"
description = "MCP server for Unreal Engine development"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
rekah-mcp = "rekah_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
